--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,14 +54,14 @@ build_stable:
 integration_tests:
   stage: test
   services:
-    - name: registry.gitlab.com/orange-opensource/lfn/onap/mock_servers/mock-sdc:feature-mock-vendor
+    - name: registry.gitlab.com/orange-opensource/lfn/onap/mock_servers/mock-sdc:develop
       alias: sdc.api.fe.simpledemo.onap.org
   image: python:3.7
   script:
     - pip install .
     - pip install pytest mock # mock is needed as pytest parse all files before selection
     - mv setup.cfg setup.old # pytest tries to use setup.cfg but we don't want
-    - pytest -m integration --verbose --junitxml=pytest-integration.xml tests
+    - pytest --verbose --junitxml=pytest-integration.xml integration_tests
   artifacts:
     reports:
       junit: pytest-*.xml
