--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ zip_safe = False
 include_package_data = True
 package_dir=
     =src
-packages=find:
+packages=find_namespace:
 install_requires =
   requests[socks]
   jinja2
@@ -40,7 +40,7 @@ test=pytest
 
 [tool:pytest]
 addopts =
-  --verbose -m 'not integration' --doctest-modules --junitxml=pytest-unit.xml
+  --verbose --doctest-modules --junitxml=pytest-unit.xml
   --cov-report term-missing --cov-report xml --cov-report html
   --cov=src/onapsdk --maxfail=1
 testpaths = tests src
