Pin pytest-runner to latest version 5.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ install_requires =
   jinja2
   simplejson
 setup_requires =
-  pytest-runner
+  pytest-runner==5.2
 tests_require =
   mock
   pytest
