--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ tests_require =
   pytest
   pytest-cov
   pytest-mock
+  requests-mock
 
 [options.packages.find]
 where=src
@@ -42,5 +43,6 @@ test=pytest
 addopts =
   --verbose --doctest-modules --junitxml=pytest-unit.xml
   --cov-report term-missing --cov-report xml --cov-report html
-  --cov=src/onapsdk --maxfail=1
+  --cov=src/onapsdk  --maxfail=1 
+
 testpaths = tests src
