Pin requests to latest version 2.22.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ package_dir=
     =src
 packages=find_namespace:
 install_requires =
-  requests[socks]
+  requests[socks]==2.22.0
   jinja2
   simplejson
 setup_requires =
