--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ package_dir=
 packages=find_namespace:
 install_requires =
   requests[socks]==2.22.0
-  jinja2
+  jinja2==2.10.3
   simplejson
 setup_requires =
   pytest-runner==5.2
