Pin simplejson to latest version 3.17.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ packages=find_namespace:
 install_requires =
   requests[socks]==2.22.0
   jinja2==2.10.3
-  simplejson
+  simplejson==3.17.0
 setup_requires =
   pytest-runner==5.2
 tests_require =
