Revert "Merge branch 'feature/service_instance' into 'develop'"
This reverts merge request !44

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,6 @@ install_requires =
   requests[socks]==2.23.0
   jinja2==2.11.2
   simplejson==3.17.0
-  oyaml==0.9
 setup_requires =
   pytest-runner==5.2
 tests_require =
@@ -30,6 +29,7 @@ tests_require =
   pytest-cov
   pytest-mock
   requests-mock
+  oyaml
 
 [options.packages.find]
 where=src
