--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@
     - build
     - test
     - deploy
-  
+
   image: docker:git
   services:
     - docker:dind
@@ -20,11 +20,11 @@
     # Variable for SAST
     SAST_EXCLUDED_PATHS: "docs,integration_tests,scripts,tests"
     SAST_BANDIT_EXCLUDED_PATHS: "docs,integration_tests,scripts,tests"
-  
+
   .before_script_docker: &before_script_docker
     before_script:
       - docker login -u gitlab-ci-token -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
-  
+
   build_master:
     stage: build
     <<: *before_script_docker
@@ -33,7 +33,7 @@
       - docker push "$CI_REGISTRY_IMAGE:latest"
     rules:
       - if: '$CI_COMMIT_BRANCH == "master"'
-  
+
   build_testing:
     stage: build
     <<: *before_script_docker
@@ -42,7 +42,7 @@
       - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}"
     rules:
       - if: '$CI_COMMIT_BRANCH && $CI_COMMIT_BRANCH != "master"'
-  
+
   build_stable:
     stage: build
     <<: *before_script_docker
@@ -51,7 +51,7 @@
       - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_TAG}"
     rules:
       - if: '$CI_COMMIT_TAG'
-  
+
   .integration_tests: &integration_tests
     stage: test
     variables:
@@ -77,11 +77,11 @@
   integration_tests:3.7:
     image: python:3.7
     <<: *integration_tests
-    
+
   integration_tests:3.8:
     image: python:3.8
     <<: *integration_tests
-  
+
   pages:
     stage: deploy
     image:
@@ -96,6 +96,17 @@
       variables:
         - $JOBS_DISABLED
 
+  upload:
+    stage: deploy
+    image:
+      name: python:3.8
+    script:
+      - pip install -r upload-requirements.txt
+      - python setup.py sdist bdist_wheel
+      - twine upload --non-interactive dists/*
+    rules:
+      - if: '$CI_COMMIT_TAG'
+
   include:
     - remote: 'https://gitlab.com/Orange-OpenSource/lfn/ci_cd/gitlab-ci-templates/raw/master/pylint.gitlab-ci.yml'
     - remote: 'https://gitlab.com/Orange-OpenSource/lfn/ci_cd/gitlab-ci-templates/-/raw/master/pytest.gitlab-ci.yml'
@@ -108,4 +119,3 @@
     - template: SAST.gitlab-ci.yml
     - template: License-Management.gitlab-ci.yml
     - template: Container-Scanning.gitlab-ci.yml
-
