--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,8 @@
 name = onapsdk
 version = attr: src.onapsdk.version.__version__
 description = SDK to use ONAP Programatically
-long_description = file: README.md, CHANGELOG.md, LICENSE
+long_description = file: README.md, CHANGELOG.md
+long_description_content_type = text/markdown
 url = https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk
 author = Orange OpenSource
 license = Apache 2.0
