--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,7 +103,7 @@
     script:
       - pip install -r upload-requirements.txt
       - python setup.py sdist bdist_wheel
-      - twine upload --non-interactive dists/*
+      - twine upload --non-interactive dist/*
     rules:
       - if: '$CI_COMMIT_TAG'
 
