--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,8 @@ install_requires =
   jinja2==2.11.2
   simplejson==3.17.2
   oyaml==0.9
+  pyOpenSSL==19.1.0
+  jsonschema==3.2.0
 setup_requires =
   pytest-runner==5.2
 tests_require =
