--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,8 +73,10 @@
         alias: cds.api.simpledemo.onap.org
       - name: registry.gitlab.com/orange-opensource/lfn/onap/mock_servers/mock-msb-k8s:latest
         alias: msb.k8s.api.simpledemo.onap.org
-      - name: registry.gitlab.com/orange-opensource/lfn/onap/mock_servers/mock-dcae:latest
+      - name: registry.gitlab.com/orange-opensource/lfn/onap/mock_servers/mock-dcae/mock-ves:latest
         alias: ves.api.simpledemo.onap.org
+      - name: registry.gitlab.com/orange-opensource/lfn/onap/mock_servers/mock-dmaap:latest
+        alias: dmaap.api.simpledemo.onap.org
     script:
       - pip install .
       - pip install pytest mock # mock is needed as pytest parse all files before selection
