--- a/setup.cfg
+++ b/setup.cfg
@@ -30,11 +30,9 @@ install_requires =
 setup_requires =
   pytest-runner==5.2
 tests_require =
-  mock
-  pytest
-  pytest-cov
-  pytest-mock
-  requests-mock
+  pytest==6.1.1
+  pytest-cov==2.10.1
+  requests-mock==1.8.0
   coverage==4.5.4
 
 [options.packages.find]
