Run tests on Python 3.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,py38,py39,pylint,pydocstyle
+envlist = py37,py38,py39,py310,pylint,pydocstyle
 
 [testenv]
 commands = pytest tests/
