--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@
   variables:
     DOCKER_DRIVER: overlay
     # Variables for pytest.gitlab-ci.yml
-    PYTHON_VERSIONS: "v3.7 v3.8 v3.9"
+    PYTHON_VERSIONS: "v3.7 v3.8 v3.9 v3.10"
     # Variables for Container-Scanning.gitlab-ci.yml
     CI_APPLICATION_REPOSITORY: $CI_REGISTRY_IMAGE #/$CI_COMMIT_REF_SLUG
     CI_APPLICATION_TAG: $CI_COMMIT_REF_SLUG #$CI_COMMIT_SHA
@@ -95,6 +95,10 @@
 
   integration_tests:3.9:
     image: python:3.9
+    <<: *integration_tests
+
+  integration_tests:3.10:
+    image: python:3.10
     <<: *integration_tests
 
   pages:
