--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
   oyaml==1.0
   pyOpenSSL==19.1.0
   jsonschema==3.2.0
+  dacite==1.6.0
 setup_requires =
   pytest-runner==5.2
 tests_require =
