Restore removed important lines

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,11 @@ install_requires =
   dacite==1.6.0
 setup_requires =
   pytest-runner==5.2
+tests_require =
+  pytest
+  pytest-cov
+  requests-mock
+  coverage
 
 [options.packages.find]
 where=src
