--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,10 @@ install_requires =
 setup_requires =
   pytest-runner==5.2
 tests_require =
-  pytest
-  pytest-cov
-  requests-mock
-  coverage
+  pytest==7.0.1
+  pytest-cov==3.0.0
+  requests-mock==1.9.3
+  coverage==6.3.1
 
 [options.packages.find]
 where=src
