--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,13 @@
 [tox]
+minversion = 3.8
 envlist = py37,py38,py39,py310,pylint,pydocstyle
+ignore_basepython_conflict = true
 
 [testenv]
 commands = pytest tests/
 deps = -rtest-requirements.txt
 setenv = PYTHONPATH = {toxinidir}/src
+basepython =python3.8
 
 [testenv:pylint]
 commands = pylint src/
