--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ setenv = PYTHONPATH = {toxinidir}/src
 
 [testenv:pylint]
 commands = pylint src/
+basepython = python3.8
 
 [testenv:pydocstyle]
 commands = pydocstyle src/
